--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kts google page</title>
    <style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
     .container{
         display: flex;
         flex-direction: column;
     }
     img{
-        height: 100px;
+        height: 90px;
      margin-left:auto;
     margin-right: auto;
     margin-top: 100px;
@@ -48,11 +52,24 @@ button{
     margin-right: 5px;
    padding-left: 15px;
    padding-right: 15px;
+   font-size:medium;
 }
 button:hover{
 
     border :1px solid rgb(223, 218, 218)
 }
+.para{
+    margin-top: 80px;
+}
+.para a{
+     text-decoration: none;
+     color: #1A0DAB;
+      font-size: small;
+    }
+    .para a:hover{
+
+        text-decoration: underline;
+    }
    </style>  
     
 </head>
@@ -65,6 +82,18 @@ button:hover{
         <button>Google search</button>
         <button>I'm feeling lucky</button>
     </div>
+    <p class="para">
+    Google offered in:  
+    <a href=""> हिन्दी</a>
+    <a href=""> বাংলা</a>
+    <a href="">తెలుగు</a>
+    <a href=""> मराठी</a>
+    <a href="">தமிழ்</a>
+    <a href=""> ગુજરાતી</a>
+    <a href=""> ಕನ್ನಡ</a>
+    <a href="">മലയാളം</a>
+    <a href="">ਪੰਜਾਬੀ</a>
+    </p> 
     </div>
 </body>
 </html>
