--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@ button:hover{
     border :1px solid rgb(223, 218, 218)
 }
 .para{
-    margin-top: 80px;
+    margin-top: 30px;
 }
 .para a{
      text-decoration: none;
      color: #1A0DAB;
       font-size: small;
+      padding:5px;
     }
     .para a:hover{
 
