--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kts google page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
    <style>
     *{
         margin: 0;
@@ -78,8 +80,8 @@ button:hover{
     <div class="container">
     
 <img src="logo.png" alt="Google logo">
-
-<input type="text">
+    
+    <input type="text" >
     <div>
         <button>Google search</button>
         <button>I'm feeling lucky</button>
