--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .container{
         display: flex;
         flex-direction: column;
+        height: 84vh;
     }
     img{
         height: 90px;
@@ -73,6 +74,8 @@ button:hover{
 
         text-decoration: underline;
     }
+
+
    </style>  
     
 </head>
@@ -100,4 +103,7 @@ button:hover{
     </p> 
     </div>
 </body>
+<footer>
+
+</footer>
 </html>
