--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         margin: 0;
         padding: 0;
     }
+
+    /* body{
+        background-image: url(pexels-sebastiaan9977-1097456.jpg);
+        background-size:cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 100vh;
+        margin: 0;
+        
+    } */
     .container{
         display: flex;
         flex-direction: column;
@@ -63,8 +73,10 @@ button:hover{
 }
 .para{
     margin-top: 30px;
+
 }
 .para a{
+  
      text-decoration: none;
      color: #1A0DAB;
       font-size: small;
